--- a/src/app/access/signup/signup.component.html
+++ b/src/app/access/signup/signup.component.html
@@ -1,73 +1,118 @@
 <div class="container">
-    <div class="row mt-5">
-        <div class="col-md-12">
-            <div class="w3-container">
-                <div class="w3-content" style="max-width:1000px;">
-                    <div class="w3-card-4 mySlides" style="width:100%">
-                        <div class="w3-container w3-brown">
-                            <h2>SignUp</h2>
-                        </div>
-                        <form class="w3-container" action="/action_page.php">
-                            <p>
-                                <label class="w3-text-brown"><b>First Name</b></label>
-                                <input class="w3-input w3-border" name="first" type="text"></p>
-                            <p>
-                                <label class="w3-text-brown"><b>Last Name</b></label>
-                                <input class="w3-input w3-border" name="last" type="text"></p>
-                            <p>
-                                <label class="w3-text-brown"><b>User Name</b></label>
-                                <input class="w3-input w3-border" name="last" type="text"></p>
-                        </form>
-                    </div>
-                    <div class="w3-card-4 mySlides" style="width:100%">
-                        <div class="w3-container w3-brown">
-                            <h2>SignUp</h2>
-                        </div>
-                        <form class="w3-container" action="/action_page.php">
-                            <p>
-                                <label class="w3-text-brown"><b>Email Name</b></label>
-                                <input class="w3-input w3-border" name="first" type="email"></p>
-                            <p>
-                                <label class="w3-text-brown"><b>Password</b></label>
-                                <input class="w3-input w3-border" name="last" type="password"></p>
-                            <p>
-                                <label class="w3-text-brown"><b>Phone Number</b></label>
-                                <input class="w3-input w3-border" name="last" type="number"></p>
-                        </form>
-                    </div>
-                    <div class="w3-card-4 mySlides" style="width:100%">
-                        <div class="w3-container w3-brown">
-                            <h2>SignUp</h2>
-                        </div>
-                        <form class="w3-container" action="/action_page.php">
-                            <p>
-                                <label class="w3-text-brown"><b>Designation</b></label>
-                                <input class="w3-input w3-border" name="first" type="text"></p>
-                            <p>
-                                <label class="w3-text-brown"><b>Department</b></label>
-                                <input class="w3-input w3-border" name="last" type="text"></p>
-                            <p>
-                                <label class="w3-text-brown"><b>Role</b></label>
-                                <input class="w3-input w3-border" name="last" type="text"></p>
-                            <p>
-                                <button class="w3-btn w3-brown">SignUp</button></p>
-                        </form>
-                    </div>
-                </div>
+  <div class="row mt-5">
+    <div class="col-md-12">
+      <div class="w3-container">
+        <div class="w3-content" style="max-width:1000px;">
+          <div class="w3-card-4 mySlides" style="width:100%">
+            <div class="w3-container w3-brown">
+              <h2>SignUp</h2>
+            </div>
+            <form class="w3-container" action="/action_page.php">
+              <p>
+                <label class="w3-text-brown">
+                  <b>First Name</b>
+                </label>
+                <input class="w3-input w3-border" name="first" [(ngModel)]="firstname" type="text">
+              </p>
+              <p>
+                <label class="w3-text-brown">
+                  <b>Last Name</b>
+                </label>
+                <input class="w3-input w3-border" name="last" [(ngModel)]="lastname" type="text">
+              </p>
+              <p>
+                <label class="w3-text-brown">
+                  <b>User Name</b>
+                </label>
+                <input class="w3-input w3-border" name="last" [(ngModel)]="username" type="text">
+              </p>
+            </form>
+          </div>
+          <div class="w3-card-4 mySlides" style="width:100%">
+            <div class="w3-container w3-brown">
+              <h2>SignUp</h2>
+            </div>
+            <form class="w3-container" action="/action_page.php">
+              <p>
+                <label class="w3-text-brown">
+                  <b>Email Name</b>
+                </label>
+                <input class="w3-input w3-border" name="first" [(ngModel)]="email" type="email">
+              </p>
+              <p>
+                <label class="w3-text-brown">
+                  <b>Password</b>
+                </label>
+                <input class="w3-input w3-border" name="last" [(ngModel)]="password" type="password">
+              </p>
+              <p>
+                <label class="w3-text-brown">
+                  <b>Phone Number</b>
+                </label>
+                <input class="w3-input w3-border" name="last" [(ngModel)]="phonenumber" type="number">
+              </p>
+            </form>
+          </div>
+          <div class="w3-card-4 mySlides" style="width:100%">
+            <div class="w3-container w3-brown">
+              <h2>SignUp</h2>
+            </div>
+            <form class="w3-container" action="/action_page.php">
+              <p>
+                <label class="w3-text-brown">
+                  <b>Designation</b>
+                </label>
+                <input class="w3-input w3-border" name="first" [(ngModel)]="desgination" type="text">
+              </p>
+              <p>
+                <label class="w3-text-brown">
+                  <b>Department</b>
+                </label>
+                <input class="w3-input w3-border" name="last" [(ngModel)]="department" type="text">
+              </p>
+              <p>
+                <label class="w3-text-brown">
+                  <b>Role</b>
+                </label>
+                <input class="w3-input w3-border" name="last" [(ngModel)]="role" type="text">
+              </p>
+              <p>
+                <button class="w3-btn w3-brown" (click)="signupdetails()">
+                  SignUp
+                </button>
+              </p>
+            </form>
+          </div>
+        </div>
 
-                <div class="w3-center mt-3">
-                    <!-- <div class="w3-section">
+
+
+
+
+
+
+        <div class="w3-center mt-3">
+          <!-- <div class="w3-section">
                         <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ Prev</button>
                         <button class="w3-button w3-light-grey" onclick="plusDivs(1)">Next ❯</button>
                     </div> -->
-                    <button class="w3-button demo" onclick="currentDiv(1)">1</button>
-                    <button class="w3-button demo" onclick="currentDiv(2)">2</button>
-                    <button class="w3-button demo" onclick="currentDiv(3)">3</button>
-                </div>
-            </div>
+          <button class="w3-button demo" onclick="currentDiv(1)">
+            1
+          </button>
+          <button class="w3-button demo" onclick="currentDiv(2)">
+            2
+          </button>
+          <button class="w3-button demo" onclick="currentDiv(3)">
+            3
+          </button>
         </div>
-        <div class="col-md-6 offset-5 mt-5">
-            Already a User? <button class="w3-btn w3-brown ml-3" (click)="goToLogin()">LogIn</button>
-        </div>
+      </div>
     </div>
+    <div class="col-md-6 offset-5 mt-5">
+      Already a User?
+      <button class="w3-btn w3-brown ml-3" (click)="goToLogin()">
+        LogIn
+      </button>
+    </div>
+  </div>
 </div>
