new components created and new design created

--- a/src/app/access/signup/signup.component.html
+++ b/src/app/access/signup/signup.component.html
@@ -17,6 +17,8 @@
                             <p>
                                 <label class="w3-text-brown"><b>User Name</b></label>
                                 <input class="w3-input w3-border" name="last" type="text"></p>
+                            <p>
+                                <button class="w3-btn w3-brown" (click)="currentDiv(1)">Next</button></p>
                         </form>
                     </div>
                     <div class="w3-card-4 mySlides" style="width:100%">
@@ -33,6 +35,8 @@
                             <p>
                                 <label class="w3-text-brown"><b>Phone Number</b></label>
                                 <input class="w3-input w3-border" name="last" type="number"></p>
+                            <p>
+                                <button class="w3-btn w3-brown" (click)="currentDiv(2)">Next</button></p>
                         </form>
                     </div>
                     <div class="w3-card-4 mySlides" style="width:100%">
@@ -57,12 +61,12 @@
 
                 <div class="w3-center mt-3">
                     <!-- <div class="w3-section">
-                        <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ Prev</button>
-                        <button class="w3-button w3-light-grey" onclick="plusDivs(1)">Next ❯</button>
+                        <button class="w3-button w3-light-grey" (click)="plusDivs(-1)">❮ Prev</button>
+                        <button class="w3-button w3-light-grey" (click)="plusDivs(1)">Next ❯</button>
                     </div> -->
-                    <button class="w3-button demo" onclick="currentDiv(1)">1</button>
-                    <button class="w3-button demo" onclick="currentDiv(2)">2</button>
-                    <button class="w3-button demo" onclick="currentDiv(3)">3</button>
+                    <button class="w3-button demo" (click)="currentDiv(1)">1</button>
+                    <button class="w3-button demo" (click)="currentDiv(2)">2</button>
+                    <button class="w3-button demo" (click)="currentDiv(3)">3</button>
                 </div>
             </div>
         </div>
