--- a/src/app/admin/view-profile/view-profile.component.html
+++ b/src/app/admin/view-profile/view-profile.component.html
@@ -20,8 +20,14 @@
         <a href="#" class="w3-bar-item w3-button w3-padding-large">My Profile</a>
     </div>
 
+    <!-- <div class="mt-5">
+        <button class="btn btn-action" (click)="downloadPdf()" style="background-color: #1668af;color: white;" (click)="downloadPdf()">
+            Download PDF
+        </button>
+    </div> -->
+
     <!-- Page Container -->
-    <div class="w3-container w3-content" style="max-width:1400px;margin-top:40px">
+    <div class="w3-container w3-content" id="htmlData" style="max-width:1400px;margin-top:40px">
         <!-- The Grid -->
         <div class="w3-row">
             <!-- Left Column -->
