--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,18 @@
 <!-- Footer -->
-<footer class="w3-container w3-padding-16 w3-light-grey">
+<!-- <footer class="w3-container w3-padding-16 w3-light-grey">
     <h4>FOOTER</h4>
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer> -->
+
+<footer>
+    <div class="w3-container">
+        <div class="w3-panel w3-border w3-leftbar w3-rightbar p-3">
+            <!-- <p class="text-center mt-3 footer">CopyRights By <a [routerLink]="['/home']" class="copyright">BookStore</a>
+            <span class="ml-5">Last Login on 09:30 AM July 07, 2020 | Powered By <a [routerLink]="['/home']" class="copyright">BookStore</a></span>
+        </p> -->
+            <p class="mt-3">CopyRights By <a [routerLink]="['/home']" class="copyright">Bookstore</a></p>
+            <p class="mt-3">Last Login on 09:30 AM July 07, 2020 | Powered By <a [routerLink]="['/home']"
+                    class="copyright">Bookstore</a></p>
+        </div>
+    </div>
 </footer>
