--- a/src/styles.css
+++ b/src/styles.css
@@ -1,14 +1,49 @@
 /* You can add global styles to this file, and also import other style files */
 
+/* html, body {
+    background-image: url('./assets/images/bluewhite.jpeg');
+} */
+
 .w3-main {
-    margin-top: 30px;
-    width: 100%;
-    padding-left: 280px;
-    transition: 0.3s padding-left ease;
-    height: calc(100% - 62px);
+  margin-top: 20px;
+  width: 100%;
+  padding-left: 250px;
+  transition: 0.3s padding-left ease;
+  height: calc(100% - 62px);
+  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .w3-main.show {
-    padding-left: 0px;
-    width: 100%;
+  padding-left: 0px;
+  width: 100%;
+}
+
+/* .w3-main .container-fluid {
+  overflow: hidden;
+  overflow-x: hidden;
+} */
+
+/* html, body {
+    background-color: #dee2e6;
+} */
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #dee2e6;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #888;
 }
