auth guard and login page routing code changes

--- a/src/app/admin/inbox/inbox.component.html
+++ b/src/app/admin/inbox/inbox.component.html
@@ -9,7 +9,7 @@
                 <!-- Side Navigation -->
                 <nav class="w3-sidebar w3-bar-block w3-collapse w3-white w3-card"
                     style="z-index:3;width:320px;bottom: 10px;height: calc(100% - 80px);" id="mySidebar">
-                    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-dark-grey w3-button w3-left-align"
+                    <a href="javascript:void(0)" class="w3-bar-item w3-dark-grey w3-button w3-left-align"
                         onclick="document.getElementById('id01').style.display='block'">New Message <i
                             class="w3-padding fa fa-pencil"></i></a>
                     <a id="myBtn" href="javascript:void(0)" class="w3-bar-item w3-button"
