--- a/src/app/access/signup/signup.component.html
+++ b/src/app/access/signup/signup.component.html
@@ -91,18 +91,21 @@
 
 
 
+
+
+
         <div class="w3-center mt-3">
           <!-- <div class="w3-section">
                         <button class="w3-button w3-light-grey" onclick="plusDivs(-1)">❮ Prev</button>
                         <button class="w3-button w3-light-grey" onclick="plusDivs(1)">Next ❯</button>
                     </div> -->
-          <button class="w3-button demo" onclick="currentDiv(1)">
+          <button class="w3-button demo" (click)="currentDiv(1)">
             1
           </button>
-          <button class="w3-button demo" onclick="currentDiv(2)">
+          <button class="w3-button demo" (click)="currentDiv(2)">
             2
           </button>
-          <button class="w3-button demo" onclick="currentDiv(3)">
+          <button class="w3-button demo" (click)="currentDiv(3)">
             3
           </button>
         </div>
