--- a/src/app/book-order-form/book-order-form.component.html
+++ b/src/app/book-order-form/book-order-form.component.html
@@ -6,12 +6,12 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
-                <h2>Book Order Form</h2>
+                <h2>Book Order Form<span class="w3-right"><button class="btn-view" (click)="backToBooks()">Back</button></span></h2>
                 <p>Please make sure the order details entered correctly or not.</p>
                 <div class="row">
                     <div class="col-75">
                         <div class="container">
-                            <form action="/action_page.php">
+                            <form>
 
                                 <div class="row">
                                     <div class="col-50">
