--- a/src/app/access/signup/signup.component.html
+++ b/src/app/access/signup/signup.component.html
@@ -62,7 +62,7 @@
                 <label class="w3-text-brown">
                   <b>Designation</b>
                 </label>
-                <input class="w3-input w3-border" name="first" [(ngModel)]="desgination" type="text">
+                <input class="w3-input w3-border" name="first" [(ngModel)]="designation" type="text">
               </p>
               <p>
                 <label class="w3-text-brown">
