--- a/src/app/admin/view-profile/view-profile.component.html
+++ b/src/app/admin/view-profile/view-profile.component.html
@@ -27,7 +27,7 @@
     </div> -->
 
     <!-- Page Container -->
-    <div class="w3-container w3-content" id="htmlData" style="max-width:1400px;margin-top:40px">
+    <div class="w3-container w3-content" id="htmlData" style="max-width:1400px;">
         <!-- The Grid -->
         <div class="w3-row">
             <!-- Left Column -->
@@ -39,7 +39,7 @@
                         <p class="w3-center"><img src="assets/w3images/avatar3.png" class="w3-circle"
                                 style="height:106px;width:106px" alt="Avatar"></p>
                         <hr>
-                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> Designer, UI</p>
+                        <p><i class="fa fa-pencil fa-fw w3-margin-right w3-text-theme"></i> {{ designation }}</p>
                         <p><i class="fa fa-home fa-fw w3-margin-right w3-text-theme"></i> London, UK</p>
                         <p><i class="fa fa-birthday-cake fa-fw w3-margin-right w3-text-theme"></i> April 1, 1988</p>
                     </div>
@@ -110,7 +110,7 @@
                 <br>
 
                 <!-- Alert Box -->
-                <div
+                <!-- <div
                     class="w3-container w3-display-container w3-round w3-theme-l4 w3-border w3-theme-border w3-margin-bottom w3-hide-small">
                     <span onclick="this.parentElement.style.display='none'"
                         class="w3-button w3-theme-l3 w3-display-topright">
@@ -118,7 +118,7 @@
                     </span>
                     <p><strong>Hey!</strong></p>
                     <p>People are looking at your profile. Find out who.</p>
-                </div>
+                </div> -->
 
                 <!-- End Left Column -->
             </div>
@@ -130,7 +130,7 @@
                     <div class="w3-col m12">
                         <div class="w3-card w3-round w3-white">
                             <div class="w3-container w3-padding">
-                                <h6 class="w3-opacity">Social Media template by w3.css</h6>
+                                <!-- <h6 class="w3-opacity">Social Media template by w3.css</h6> -->
                                 <p contenteditable="true" class="w3-border w3-padding">Status: Feeling Blue</p>
                                 <button type="button" class="w3-button w3-theme"><i class="fa fa-pencil"></i>
                                      Post</button>
@@ -163,7 +163,7 @@
                          Comment</button>
                 </div>
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
+                <!-- <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
                     <img src="assets/w3images/avatar5.png" alt="Avatar" class="w3-left w3-circle w3-margin-right"
                         style="width:60px">
                     <span class="w3-right w3-opacity">16 min</span>
@@ -176,9 +176,9 @@
                          Like</button>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
                          Comment</button>
-                </div>
+                </div> -->
 
-                <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
+                <!-- <div class="w3-container w3-card w3-white w3-round w3-margin"><br>
                     <img src="assets/w3images/avatar6.png" alt="Avatar" class="w3-left w3-circle w3-margin-right"
                         style="width:60px">
                     <span class="w3-right w3-opacity">32 min</span>
@@ -193,7 +193,7 @@
                          Like</button>
                     <button type="button" class="w3-button w3-theme-d2 w3-margin-bottom"><i class="fa fa-comment"></i>
                          Comment</button>
-                </div>
+                </div> -->
 
                 <!-- End Middle Column -->
             </div>
@@ -228,16 +228,16 @@
                         </div>
                     </div>
                 </div>
-                <br>
+                <!-- <br> -->
 
-                <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
+                <!-- <div class="w3-card w3-round w3-white w3-padding-16 w3-center">
                     <p>ADS</p>
                 </div>
                 <br>
 
                 <div class="w3-card w3-round w3-white w3-padding-32 w3-center">
                     <p><i class="fa fa-bug w3-xxlarge"></i></p>
-                </div>
+                </div> -->
 
                 <!-- End Right Column -->
             </div>
