--- a/src/app/book-order-form/book-order-form.component.css
+++ b/src/app/book-order-form/book-order-form.component.css
@@ -8,6 +8,19 @@ body {
   box-sizing: border-box;
 }
 
+.btn-view {
+  border: none;
+  outline: none;
+  padding: 12px 16px !important;
+  cursor: pointer;
+  background-color: #ddd;
+}
+
+.btn-view:hover {
+  background-color: #1668af;
+  color: white;
+}
+
 .row {
   display: -ms-flexbox;
   /* IE10 */
