--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
             <span class="ml-5">Last Login on 09:30 AM July 07, 2020 | Powered By <a [routerLink]="['/home']" class="copyright">BookStore</a></span>
         </p> -->
             <p class="mt-3">CopyRights By <a [routerLink]="['/home']" class="copyright">Bookstore</a></p>
-            <p class="mt-3">Last Login on 09:30 AM July 07, 2020 | Powered By <a [routerLink]="['/home']"
+            <p class="mt-3">Last Login on {{ lastlogintime | date:'medium' }} | Powered By <a [routerLink]="['/home']"
                     class="copyright">Bookstore</a></p>
         </div>
     </div>
