--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -5,7 +5,7 @@
             <img src="assets/w3images/avatar2.png" class="w3-circle w3-margin-right" style="width:46px">
         </div>
         <div class="w3-col s8 ">
-            <span>Welcome, <strong>Mike</strong></span><br>
+            <span>Welcome, <strong>{{ firstname }} {{ lastname }}</strong></span><br>
             <a [routerLink]="['/admin/inbox']" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
             <a [routerLink]="['/admin/profile']" class="w3-bar-item w3-button"><i class="fa fa-user"></i></a>
             <a [routerLink]="['/admin/settings']" class="w3-bar-item w3-button"><i class="fa fa-cog"></i></a>
