--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,9 +41,9 @@
         <button class="w3-button w3-padding-large" title="Notifications"><i class="fa fa-bell"></i><span
                 class="w3-badge w3-right w3-small w3-green">3</span></button>
         <div class="w3-dropdown-content w3-card-4 w3-bar-block notification" style="width:300px;top:45px;left: 620px;">
-            <a [routerLink]="['/']" class="w3-bar-item w3-button">One new friend request</a>
-            <a [routerLink]="['/']" class="w3-bar-item w3-button">John Doe posted on your wall</a>
-            <a [routerLink]="['/']" class="w3-bar-item w3-button">Jane likes your post</a>
+            <a [routerLink]="['/notitifications']" class="w3-bar-item w3-button">One new friend request</a>
+            <a [routerLink]="['/notitifications']" class="w3-bar-item w3-button">John Doe posted on your wall</a>
+            <a [routerLink]="['/notitifications']" class="w3-bar-item w3-button">Jane likes your post</a>
             <a [routerLink]="['/notifications']" class="w3-bar-item w3-button notify" [hidden]="href == '/notifications'">View All</a>
         </div>
     </div>
