--- a/src/app/sidemenu/sidemenu.component.html
+++ b/src/app/sidemenu/sidemenu.component.html
@@ -22,7 +22,8 @@
         <!-- <a [routerLink]="['/']" class="w3-bar-item w3-button w3-padding"><i class="fa fa-eye fa-fw"></i>  Views</a> -->
         <a [routerLink]="['/books']" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw"></i>  Books</a>
         <a [routerLink]="['/books/history']" class="w3-bar-item w3-button w3-padding"><i class="fa fa-history fa-fw"></i>  History</a>
-        <!-- <a [routerLink]="['/admin/settings']" class="w3-bar-item w3-button w3-padding"><i class="fa fa-cog fa-fw"></i>  Settings</a><br><br> -->
+        <a [routerLink]="['/chatroom']" class="w3-bar-item w3-button w3-padding"><i class="fa fa-whatsapp fa-fw"></i>  ChatRoom</a>
+        <a [routerLink]="['/chatme']" class="w3-bar-item w3-button w3-padding"><i class="fa fa-comments-o fa-fw"></i>  ChatMe</a><br><br>
     </div>
 </nav>
 
