chat room file added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <router-outlet></router-outlet>
-<ng-container *ngIf="href != 'login' || href != 'signup'">
+<ng-container *ngIf="href != 'login' && href != 'signup'">
     <app-chat-boss></app-chat-boss>
 </ng-container>
