--- a/src/app/chat-boss/chat-boss.component.html
+++ b/src/app/chat-boss/chat-boss.component.html
@@ -1,5 +1,17 @@
-<div class="chat">
-    <div class="chat-icon">
-        <i class="fa fa-comments-o" aria-hidden="false"></i>
+<div class="chatbox">
+    <div class="chat">
+        <i class="fa fa-comments-o comment-icon" aria-hidden="false"></i>
+        <!-- <i class="fa fa-times close-icon" aria-hidden="false"></i> -->
     </div>
+    <!-- <div class="card">
+        <div class="card-header">
+
+        </div>
+        <div class="card-body">
+
+        </div>
+        <div class="card-footer">
+
+        </div>
+    </div> -->
 </div>
